[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-news"
version = "0.1.0"
description = "Multimodal stock forecasting conditioned on stock news."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Weiwei", email = "weiwei880411@gmail.com" }
]

dependencies = [
  # --- Core numeric / ML stack ---
  "torch>=2.2.0,<3.0.0",         # PatchTST, Q-Former, diffusion decoder, all models
  "numpy>=1.24.0",
  "pandas>=2.0.0",

  # --- Hugging Face & text encoder ---
  "datasets>=2.18.0",            # oliverwang15/us_stock_news_with_price dataset
  "sentence-transformers>=2.7.0",# all-MiniLM-L6-v2 sentence encoder
  "peft>=0.11.0",                # LoRA / parameter-efficient tuning for MiniLM

  # --- Training utilities & metrics ---
  "scikit-learn>=1.3.0",         # InfoNCE helpers, metrics, splits 等工具
  "tqdm>=4.66.0",                # progress bar
  "pyyaml>=6.0.0",               # 讀取 experiment.yaml config
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
  "ruff",
  "pytest",
]

[tool.setuptools]
packages = ["algo-news"]
